--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,8 +24,6 @@ steps:
       curl -v http://google.com
       echo Hello world
 
-- task: SSH@0
+- task: PowerShell@2
   inputs:
-    runOptions: 'script'
-    scriptPath: 'https://raw.githubusercontent.com/nagarjunc/java-web-start-poc/master/azureShellScript.sh'
-    readyTimeout: '20000'
+    filePath: 'https://raw.githubusercontent.com/nagarjunc/java-web-start-poc/master/azureShellScript.sh'
