Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,7 @@ steps:
   inputs:
     script: |
       echo Write your commands here
+      ls -ial
       curl -v http://google.com
       echo Hello world
 
