Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,10 +20,15 @@ steps:
 - task: CmdLine@2
   inputs:
     script: |
-      echo Write your commands here
-      ls -ial
-      curl -v http://google.com
-      echo Hello world
+      echo "Here we are going to fetch a cat fact"
+      URL="https://cat-fact.herokuapp.com/facts/random"
+      response=$(curl -s -w "%{http_code}" $URL)
+      http_code=$(tail -n1 <<< "$response")  # get the last line
+      content=$(sed '$ d' <<< "$response")   # get all but the last line which contains the status code
+      echo "$http_code"
+      echo "$content"
+      echo "Cat fact fetched success"
+
 
 - task: PowerShell@2
   inputs:
